# EntoLaw

./: .codegraph  .coverage  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  ISA.md  LICENSE  README.md  TODO.md  codemeta.json  domain_profile.yaml  pyproject.toml
data/: claim_ledger.yaml
docs/: ACCURACY_METHODOLOGY.md  REVIEW_PROTOCOL.md
entolaw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
manuscript/: 00_abstract.md  01_introduction.md  02_witness.md  03_threat.md  04_protected.md  05_property.md  06_invention.md  07_defendant.md  08_welfare.md  09_weapon.md  10_interconnections.md  11_methods.md  12_conclusion.md  99_references.md  config.yaml  references.bib
scripts/: __init__.py  finalize_web_export.py  generate_figures.py  generate_manuscript_variables.py  run_inventory.py  z_generate_manuscript_variables.py
src/: __init__.py  case_records.py  cases.py  citations.py  claim_ledger.py  claim_ledger_loading.py  claim_ledger_models.py  claim_ledger_validation.py  figure_bundle.py  figure_caption_records.py  figure_captions.py  institutions.py  interconnections.py  manuscript_variables.py  metrics.py  package_map.py  roles.py  species.py  statute_records.py  statutes.py  taxon_records.py  timeline.py  validation.py  viz.py  viz_bars.py  viz_citation_date_records.py  viz_citation_dates.py  viz_cover.py  viz_network.py  viz_theme.py  viz_timeline.py
tests/: __init__.py  conftest.py  test_bibliography.py  test_citations.py  test_claim_ledger.py  test_figures.py  test_idempotency.py  test_live_claim_sources.py  test_manuscript_variables.py  (+7 more)
(+54 files in other folders)
